--- a/style.css
+++ b/style.css
@@ -61,6 +61,9 @@ p {
   background-color: white;
   height: 570px;
 }
+.done {
+  background-color: white;
+}
 label {
   padding-left: 5px;
   padding-top: 20px;
@@ -108,4 +111,9 @@ input[type="submit"]:hover {
 }
 .err {
   color: red;
+}
+#dn {
+  color: green;
+  font-weight: bold;
+  background-color: wheat;
 }
